--- a/css/testimonial.css
+++ b/css/testimonial.css
@@ -1,32 +1,53 @@
-/* carousel */
-#quote-carousel {
-  padding: 0 10px 30px 10px;
-  margin-top: 30px;
-  text-align:center;
+/*-------------------------------*/
+/*      Code snippet by          */
+/*      @maridlcrmn              */
+/*-------------------------------*/
+
+
+section {
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
-/* indicator position */
-#quote-carousel .carousel-indicators {
-  right: 50%;
-  top: auto;
-  bottom: -10px;
-  margin-right: -19px;
+
+.quote {
+    color: rgba(0,0,0,.1);
+    text-align: center;
+    margin-bottom: 30px;
 }
-/* indicator color */
-#quote-carousel .carousel-indicators li {
-  background: #c0c0c0;
+
+/*-------------------------------*/
+/*    Carousel Fade Transition   */
+/*-------------------------------*/
+
+#fade-quote-carousel.carousel {
+  padding-bottom: 60px;
 }
-/* active indicator */
-#quote-carousel .carousel-indicators .active {
-  background: #333333;
-  height:10px;
-  width:10px;
-  margin-bottom:1px;
+#fade-quote-carousel.carousel .carousel-inner .item {
+  opacity: 0;
+  -webkit-transition-property: opacity;
+      -ms-transition-property: opacity;
+          transition-property: opacity;
 }
-/* typography */
-h1 {
-  text-align:center;
-  margin-bottom:-20px !important;
+#fade-quote-carousel.carousel .carousel-inner .active {
+  opacity: 1;
+  -webkit-transition-property: opacity;
+      -ms-transition-property: opacity;
+          transition-property: opacity;
 }
-p {
-  font-style:italic;
+#fade-quote-carousel.carousel .carousel-indicators {
+  bottom: 10px;
+}
+#fade-quote-carousel.carousel .carousel-indicators > li {
+  background-color: #e84a64;
+  border: none;
+}
+#fade-quote-carousel blockquote {
+    text-align: center;
+    border: none;
+}
+#fade-quote-carousel .profile-circle {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    border-radius: 100px;
 }
